--- a/Quadris/Quadris.csproj
+++ b/Quadris/Quadris.csproj
@@ -44,8 +44,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shape.cs" />
+    <Compile Include="Quadris.cs" />
     <Compile Include="Tetromino.cs" />
+    <Compile Include="TetrominoOrientation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
